# VO2max

./: .gitignore  DFRobot_OxygenSensor.cpp  README.md  SensirionI2CSdp.cpp  SensirionI2CSdp.h  Sensirion_GadgetBle_Lib.cpp  VO2max.ino
Arduino/: Sensirion_GadgetBle_Lib.cpp
CAD/: 3mm nut v0.SLDPRT  Adafruit BPM388.SLDASM  Adafruit ICM20948 STEMMA QT.err  Anode.SLDPRT  BMP388_Barometric_Pressure_Sensors.SLDPRT  BatteryPack.SLDPRT  Battery_Pack.SLDPRT  Body.SLDPRT  Body21.SLDPRT  CAPC-0603-T0.9-BN.SLDPRT  CAPC-0805-T0.95-BN.SLDPRT  Capot 1.SLDPRT  Capot.3mf  Capot.STL  Capot_TPU.SLDPRT  Capot_TPU.STL  Capot_ecran.SLDPRT  Cathode Bar.SLDPRT  Cathode.SLDPRT  Enclosure_CO2.STL  Hex bolt 3mm dia 8mm length v1.step  ICM-20948-9axis-IMU.SLDPRT  LED 0603 single color.SLDPRT  M3 X 10mm Hex.SLDPRT  M3 X 6mm Hex.SLDPRT  Panel_Mount_slide_switch_734-7312.SLDPRT  Part1.SLDPRT  Part4.SLDPRT  Printed Circuit Board.SLDPRT  README.md  RESC-0603.SLDPRT  SOD-323.SLDASM  (+7 more)
Embedded Software/VO2max/main/: CMakeLists.txt  app_main.c  battery.c  battery.h  bluetooth.c  bluetooth.h  bmp280.c  bmp280.h  bmp280_definitions.h  cyclist_vo2max_rgb565.h  debug.c  debug.h  driver_bmp280.c  driver_bmp280.h  driver_bmp388.c  driver_bmp388.h  driver_lcd.c  driver_lcd.h  driver_me2o2.c  driver_me2o2.h  driver_scd30.c  driver_scd30.h  driver_sdp810.c  driver_sdp810.h  driver_sdp8XX.c  driver_sdp8XX.h  driver_st7789.c  driver_st7789.h  driver_st7789_basic.c  driver_st7789_basic.h  driver_st7789_font.h  driver_st7789_interface.c  driver_st7789_settings.h  hmi.c  hmi.h  log.c  log.h  measure.c  measure.h  menu.c  (+6 more)
(+85 files in other folders)
